--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <span class="button" id="pink"></span>
         <h2>click here to change the color</h2>
     </div>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
